--- a/KNN/knn.ipynb
+++ b/KNN/knn.ipynb
@@ -252,6 +252,7 @@
     "\twith open(filename, 'r') as csvfile:\n",
     "\t    lines = csv.reader(csvfile)\n",
     "\t    dataset = list(lines)\n",
+    "        # loop through each row\n",
     "\t    for x in range(len(dataset)-1):\n",
     "\t        for y in range(4):\n",
     "\t            dataset[x][y] = float(dataset[x][y])\n",
@@ -271,16 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.09991100182197143\n",
-      "Train: 85\n",
-      "Test: 65\n"
+      "0.9164007043493355\n",
+      "Train: 102\n",
+      "Test: 48\n"
      ]
     }
    ],
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -442,12 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import operator\n",
     "def getResponse(neighbors):\n",
+    "    # classVotes is a dict, similar to JSON\n",
+    "    # e.g., {'a': 1, 'b': 2}\n",
     "\tclassVotes = {}\n",
     "\tfor x in range(len(neighbors)):\n",
     "        # based on the last element\n",
@@ -457,6 +460,7 @@
     "\t\telse:\n",
     "\t\t\tclassVotes[response] = 1\n",
     "    # reverse=True means the most voted item will be our response\n",
+    "    # itemgetter(1): get the first item, i.e. item with most votes\n",
     "\tsortedVotes = sorted(classVotes.items(), key=operator.itemgetter(1), reverse=True)\n",
     "\treturn sortedVotes[0][0]"
    ]
@@ -470,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +486,7 @@
     }
    ],
    "source": [
-    "neighbors = [[1,1,1,'a'], [2,2,2,'a'], [3,3,3,'b']]\n",
+    "neighbors = [[1,1,1,1,'a'], [2,2,2,2,'a'], [3,3,3,3,'b']]\n",
     "response = getResponse(neighbors)\n",
     "print(response)"
    ]
@@ -514,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +551,7 @@
     }
    ],
    "source": [
-    "testSet = [[1,1,1,'a'], [2,2,2,'a'], [3,3,3,'b']]\n",
+    "testSet = [[1,1,1,1,'a'], [2,2,2,2,'a'], [3,3,3,3,'b']]\n",
     "predictions = ['a', 'a', 'a']\n",
     "accuracy = getAccuracy(testSet, predictions)\n",
     "print(accuracy)"
@@ -573,9 +577,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set: 98\n",
+      "Test set: 52\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-virginica', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-versicolor', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "Accuracy: 96.15384615384616%\n"
+     ]
+    }
+   ],
    "source": [
     "# Example of kNN implemented from Scratch in Python\n",
     "\n",
