--- a/Matplotlib/Group Activity Plot 1.ipynb
+++ b/Matplotlib/Group Activity Plot 1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "df =  pd.read_csv('salary_vs_experience.csv', 'rb', delimiter=',')\n",
+    "df =  pd.read_csv('salary_vs_experience.csv', 'r', delimiter=',')\n",
     "print(df[:5])"
    ]
   },
