--- a/KNN/knn.ipynb
+++ b/KNN/knn.ipynb
@@ -272,16 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9164007043493355\n",
-      "Train: 102\n",
-      "Test: 48\n"
+      "0.9958180155175804\n",
+      "Train: 105\n",
+      "Test: 45\n"
      ]
     }
    ],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,21 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Distance: 3.4641016151377544\n"
+      "Distance: 4.0\n"
      ]
     }
    ],
    "source": [
-    "data1 = [2, 2, 2, 'a']\n",
-    "data2 = [4, 4, 4, 'b']\n",
-    "distance = euclideanDistance(data1, data2, 3)\n",
+    "data1 = [2, 2, 2, 2, 'a']\n",
+    "data2 = [4, 4, 4, 4, 'b']\n",
+    "distance = euclideanDistance(data1, data2, 4)\n",
     "print('Distance: ' + repr(distance))"
    ]
   },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -417,9 +417,9 @@
    ],
    "source": [
     "trainSet = [[2, 2, 2, 'a'], [4, 4, 4, 'b']]\n",
-    "testInstance = [5, 5, 5]\n",
+    "testInstance = [5, 5, 5, 'b']\n",
     "k = 1\n",
-    "neighbors = getNeighbors(trainSet, testInstance, 1)\n",
+    "neighbors = getNeighbors(trainSet, testInstance, k)\n",
     "print(neighbors)"
    ]
   },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -584,9 +584,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set: 98\n",
-      "Test set: 52\n",
-      "> predicted='Iris-setosa', actual='Iris-setosa'\n",
+      "Train set: 100\n",
+      "Test set: 50\n",
       "> predicted='Iris-setosa', actual='Iris-setosa'\n",
       "> predicted='Iris-setosa', actual='Iris-setosa'\n",
       "> predicted='Iris-setosa', actual='Iris-setosa'\n",
@@ -609,7 +608,8 @@
       "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
       "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
       "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
-      "> predicted='Iris-virginica', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
+      "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
       "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
       "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
       "> predicted='Iris-versicolor', actual='Iris-versicolor'\n",
@@ -622,6 +622,9 @@
       "> predicted='Iris-virginica', actual='Iris-virginica'\n",
       "> predicted='Iris-virginica', actual='Iris-virginica'\n",
       "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
+      "> predicted='Iris-versicolor', actual='Iris-virginica'\n",
+      "> predicted='Iris-versicolor', actual='Iris-virginica'\n",
       "> predicted='Iris-virginica', actual='Iris-virginica'\n",
       "> predicted='Iris-virginica', actual='Iris-virginica'\n",
       "> predicted='Iris-virginica', actual='Iris-virginica'\n",
@@ -633,12 +636,7 @@
       "> predicted='Iris-virginica', actual='Iris-virginica'\n",
       "> predicted='Iris-virginica', actual='Iris-virginica'\n",
       "> predicted='Iris-virginica', actual='Iris-virginica'\n",
-      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
-      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
-      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
-      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
-      "> predicted='Iris-virginica', actual='Iris-virginica'\n",
-      "Accuracy: 96.15384615384616%\n"
+      "Accuracy: 94.0%\n"
      ]
     }
    ],
