--- a/Matplotlib/Group Activity Plot 2.ipynb
+++ b/Matplotlib/Group Activity Plot 2.ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "df =  pd.read_csv('iris_data.csv', 'rb', delimiter=',')\n",
+    "df =  pd.read_csv('iris_data.csv', 'r', delimiter=',')\n",
     "print(df[:5])"
    ]
   },
