--- a/K-Means/05.11-K-Means.ipynb
+++ b/K-Means/05.11-K-Means.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -642,13 +642,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'numpy.ndarray'>\n",
       "(427, 640, 3)\n",
       "[174 201 231]\n"
      ]
@@ -657,6 +658,7 @@
    "source": [
     "# height, width, RGB\n",
     "# RGB maximum can be 255\n",
+    "print(type(china))\n",
     "print(china.shape)\n",
     "print(china[0][0])"
    ]
@@ -696,6 +698,7 @@
     "print(data.shape)\n",
     "print(data.shape[0])\n",
     "# explanation for next cell\n",
+    "# grab pixels at [1, 3, 4] information\n",
     "# .T transpose\n",
     "print(data[np.array([1,3,4])].T)\n",
     "R, G, B = data[np.array([1,3,4])].T\n",
