update linear regression

--- a/Linear_regression/Linear-Regression.ipynb
+++ b/Linear_regression/Linear-Regression.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -143,6 +143,7 @@
    ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
+    "# fit_intercept: Whether to calculate the intercept for this model\n",
     "model = LinearRegression(fit_intercept=True)\n",
     "# x[:, np.newaxis]\n",
     "# make it as column vector by inserting an axis along second dimension\n",
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -207,14 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(100, 3)\n",
       "0.5000000000000155\n",
       "[ 1.5 -2.   1. ]\n",
       "based on predicted interception and coef, the linear model is accurate.\n"
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
        "       [ 4., 16., 64.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -382,15 +382,7 @@
     "\n",
     "Of course, other basis functions are possible.\n",
     "For example, one useful pattern is to fit a model that is not a sum of polynomial bases, but a sum of Gaussian bases.\n",
-    "The result might look something like the following figure:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![](05.06-gaussian-basis.png)\n",
-    "[figure source in Appendix](#Gaussian-Basis)"
+    "The result might look something like the figure shows in the course website."
    ]
   },
   {
