--- a/Decision_tree/HW6.ipynb
+++ b/Decision_tree/HW6.ipynb
@@ -46,7 +46,7 @@
     "print(X.shape)\n",
     "\n",
     "# TODO Select some features (X), hint: based on the connections with\n",
-    "# our Y\n",
+    "# our Y (importance? correlation?)\n",
     "# TODO need 5 fold cross validation, 30% for testing\n",
     "# TODO Tune parameters for RandomForestClassifier\n",
     "# TODO Calculate Average accuracy score\n",
@@ -77,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
