--- a/Decision_tree/Gradient_boosting.ipynb
+++ b/Decision_tree/Gradient_boosting.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<mark>Learning rate (kind of regularization) and subsample can improve your model accuracy.</mark>\n",
+    "\n",
     "Illustration of the effect of different regularization strategies for Gradient Boosting. The example is taken from Hastie et al 2009 1.\n",
     "\n",
     "The loss function used is binomial deviance. Regularization via shrinkage (learning_rate < 1.0) improves performance considerably. In combination with shrinkage, stochastic gradient boosting (subsample < 1.0) can produce more accurate models by reducing the variance via bagging. Subsampling without shrinkage usually does poorly. Another strategy to reduce the variance is by subsampling the features analogous to the random splits in Random Forests (via the max_features parameter).\n",
@@ -13,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +104,7 @@
     "            '-', color=color, label=label)\n",
     "\n",
     "plt.legend(loc='upper left')\n",
+    "# number of estimators (sequential)\n",
     "plt.xlabel('Boosting Iterations')\n",
     "plt.ylabel('Test Set Deviance')\n",
     "\n",
