--- a/Decision_tree/HW6.ipynb
+++ b/Decision_tree/HW6.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "# TODO Select some features (X), hint: based on the connections with\n",
     "# our Y (importance? correlation?)\n",
-    "# TODO need 5 fold cross validation, 30% for testing\n",
+    "# TODO need 5 fold cross validation\n",
     "# TODO Tune parameters for RandomForestClassifier\n",
     "# TODO Calculate Average accuracy score\n",
     "# TODO Calculate Average (accuracy score/number of features)"
