--- a/Genetic Algorithm/TSP.ipynb
+++ b/Genetic Algorithm/TSP.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial distance: 1957.179839461471\n",
+      "Initial distance: 1996.041040014975\n",
       "Finished\n",
-      "Final distance: 1014.149559885845\n",
+      "Final distance: 1191.6808335863634\n",
       "Solution:\n",
-      "|40, 120|20, 160|60, 200|80, 180|100, 160|140, 140|140, 180|180, 200|200, 160|180, 100|120, 80|100, 40|60, 20|20, 20|20, 40|60, 80|160, 20|200, 40|180, 60|100, 120|\n"
+      "|140, 140|200, 160|180, 100|180, 60|200, 40|160, 20|20, 20|20, 40|60, 80|40, 120|80, 180|100, 160|140, 180|180, 200|60, 200|20, 160|60, 20|100, 40|120, 80|100, 120|\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
     "   def numberOfCities(self):\n",
     "      return len(self.destinationCities)\n",
     "\n",
-    "\n",
+    "# this is individual\n",
     "class Tour:\n",
     "   def __init__(self, tourmanager, tour=None):\n",
     "      self.tourmanager = tourmanager\n",
@@ -148,7 +148,7 @@
     "   def containsCity(self, city):\n",
     "      return city in self.tour\n",
     "\n",
-    "\n",
+    "# the include all individuals\n",
     "class Population:\n",
     "   def __init__(self, tourmanager, populationSize, initialise):\n",
     "      self.tours = []\n",
@@ -345,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
