--- a/Linear_regression/Regularization.ipynb
+++ b/Linear_regression/Regularization.ipynb
@@ -146,6 +146,7 @@
     "        ax[0].set_title(title)\n",
     "        \n",
     "    # term\n",
+    "    # for each term we have coefficent and the center (mean value) of normal distribution\n",
     "    ax[1].plot(model.steps[0][1].centers_,\n",
     "               model.steps[1][1].coef_)\n",
     "    # coefficient of each term\n",
@@ -1454,7 +1455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
